testing macOS build

--- a/.github/actions/build-node/action.yml
+++ b/.github/actions/build-node/action.yml
@@ -110,6 +110,14 @@ runs:
           node-major: ${{ inputs.node }}
           arch: 'ia32'
 
+      - name: Build arm64
+        if: inputs.os != 'macos-13' && (inputs.node >=20 || inputs.os  == 'macos-15')
+        uses: ./.github/actions/build
+        with:
+          node: ${{ steps.node-test-version.outputs.node-version }}
+          node-major: ${{ inputs.node }}
+          arch: 'arm64'
+
       - name: Build x64
         uses: ./.github/actions/build
         if: (runner.os == 'Windows') || (inputs.os  == 'macos-13')
@@ -118,13 +126,6 @@ runs:
           node-major: ${{ inputs.node }}
           arch: 'x64'
 
-      - name: Build arm64
-        if: ((inputs.node >=20) || (inputs.os  == 'macos-15') && inputs.os != 'macos-13')
-        uses: ./.github/actions/build
-        with:
-          node: ${{ steps.node-test-version.outputs.node-version }}
-          node-major: ${{ inputs.node }}
-          arch: 'arm64'
     
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
