--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -108,6 +108,6 @@ workflows:
           matrix:
             parameters:
               # os: ['linux', 'linux-arm', 'macos']
-              os: ['linux-arm']
-              node-version: ['14', '16' ,'18', '20', '22', '23']
+              os: ['linux', 'linux-arm']
+              node-version: ['14', '16' ,'18']
 
