--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,6 +43,33 @@ jobs:
           node: ${{ inputs.build-version }}
           os: ${{ matrix.os }}
 
+
+  artifacts:
+    runs-on: ubuntu-latest
+    needs: build
+    strategy:
+      fail-fast: false
+
+    name: artifacts node-${{ inputs.build-version }}
+    steps:
+      - name: Download artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: release
+          pattern: win32-edge-js-${{ inputs.build-version }}*
+
+      - name: Download artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: release
+          pattern: darwin-arm64-edge-js-${{ inputs.build-version }}*
+
+      - name: Download artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: release
+          pattern: darwin-x64-edge-js-${{ inputs.build-version }}*
+
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         if: success()
@@ -50,7 +77,7 @@ jobs:
           name: edge-js-${{ inputs.build-version }}
           path: |
             release 
-
+  
   test:
     runs-on: ${{ matrix.os }}
     needs: build
