testing build CI changes

--- a/.github/actions/build-node/action.yml
+++ b/.github/actions/build-node/action.yml
@@ -14,6 +14,22 @@ runs:
   steps:
 
       - name: Setup env
+        if: runner.os == 'Windows' && inputs.os != 'windows-2022'
+        uses: ./.github/actions/setup-env
+        with:
+          node: 20
+          os: ${{ inputs.os }}
+
+      - name: Setup env
+        if: runner.os == 'Windows' && inputs.os == 'windows-2022'
+        uses: ./.github/actions/setup-env
+        with:
+          node: 20
+          os: ${{ inputs.os }}
+          arch: 'x86'
+
+      - name: Setup env
+        if: runner.os == 'macOS'
         uses: ./.github/actions/setup-env
         with:
           node: 20
@@ -103,7 +119,7 @@ runs:
           key: '${{ inputs.os }}-${{ inputs.node}}'
 
       - name: Build ia32
-        if: (runner.os == 'Windows') && (inputs.node <23)
+        if: (inputs.os == 'windows-2022) && (inputs.node <23)
         uses: ./.github/actions/build
         with:
           node: ${{ steps.node-test-version.outputs.node-version }}
@@ -111,7 +127,7 @@ runs:
           arch: 'ia32'
 
       - name: Build arm64
-        if: inputs.os != 'macos-13' && (inputs.node >=20 || inputs.os  == 'macos-15')
+        if: inputs.os != 'macos-13' && inputs.os != 'windows-2022' && (inputs.node >=20 || inputs.os  == 'macos-15')
         uses: ./.github/actions/build
         with:
           node: ${{ steps.node-test-version.outputs.node-version }}
@@ -120,7 +136,7 @@ runs:
 
       - name: Build x64
         uses: ./.github/actions/build
-        if: (runner.os == 'Windows') || (inputs.os  == 'macos-13')
+        if: (inputs.os == 'windows-2025) || (inputs.os  == 'macos-13')
         with:
           node: ${{ steps.node-test-version.outputs.node-version }}
           node-major: ${{ inputs.node }}
@@ -129,7 +145,7 @@ runs:
     
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
-        if: runner.os == 'Windows' && success()
+        if: inputs.os == 'windows-2025 && success()
         with:
           name: win32-edge-js-${{ inputs.node }}
           path: |
@@ -137,7 +153,15 @@ runs:
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
-        if: runner.os  == 'macOS' && inputs.os  == 'macos-15' && success()
+        if: inputs.os == 'windows-2022 && success()
+        with:
+          name: win32-edge-js-x86-${{ inputs.node }}
+          path: |
+            release
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        if: inputs.os  == 'macos-15' && success()
         with:
           name: darwin-arm64-edge-js-${{ inputs.node }}
           path: |
@@ -145,7 +169,7 @@ runs:
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
-        if: runner.os  == 'macOS' && inputs.os  == 'macos-13' && success()
+        if: inputs.os  == 'macos-13' && success()
         with:
           name: darwin-x64-edge-js-${{ inputs.node }}
           path: |
