--- a/.github/actions/setup-env/action.yml
+++ b/.github/actions/setup-env/action.yml
@@ -7,6 +7,10 @@ inputs:
   os:
     description: 'runs-on'
     required: true
+  arch:
+    description: 'Architecture'
+    required: false
+    default: 'x64'
 
 runs:
   using: "composite"
@@ -16,6 +20,7 @@ runs:
       uses: actions/setup-node@v4
       with:
         node-version: ${{ inputs.node }}
+        architecture: ${{ inputs.arch }}
         cache: 'npm'
         cache-dependency-path: package-lock.json
 
