--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
     strategy:
       matrix:
         # os: [macos-13, macos-15]
-        os: [windows-2022, macos-13, macos-15]
+        os: [windows-2022, windows-2025, macos-13, macos-15]
       fail-fast: true
        
     name: build node-${{ inputs.build-version }} ${{ matrix.os }}
@@ -52,23 +52,9 @@ jobs:
 
     name: artifacts node-${{ inputs.build-version }}
     steps:
-      - name: Download artifacts
-        uses: actions/download-artifact@v4
-        with:
-          path: release
-          pattern: win32-edge-js-${{ inputs.build-version }}*
 
       - name: Download artifacts
         uses: actions/download-artifact@v4
-        with:
-          path: release
-          pattern: darwin-arm64-edge-js-${{ inputs.build-version }}*
-
-      - name: Download artifacts
-        uses: actions/download-artifact@v4
-        with:
-          path: release
-          pattern: darwin-x64-edge-js-${{ inputs.build-version }}*
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
