--- a/.github/actions/build-node/action.yml
+++ b/.github/actions/build-node/action.yml
@@ -14,14 +14,14 @@ runs:
   steps:
 
       - name: Setup env
-        if: runner.os == 'Windows' && inputs.os != 'windows-2022'
+        if: inputs.os == 'windows-2025'
         uses: ./.github/actions/setup-env
         with:
           node: 20
           os: ${{ inputs.os }}
 
       - name: Setup env
-        if: runner.os == 'Windows' && inputs.os == 'windows-2022'
+        if: inputs.os == 'windows-2022'
         uses: ./.github/actions/setup-env
         with:
           node: 20
@@ -119,7 +119,7 @@ runs:
           key: '${{ inputs.os }}-${{ inputs.node}}'
 
       - name: Build ia32
-        if: (inputs.os == 'windows-2022) && (inputs.node <23)
+        if: (inputs.os == 'windows-2022') && (inputs.node <23)
         uses: ./.github/actions/build
         with:
           node: ${{ steps.node-test-version.outputs.node-version }}
@@ -136,7 +136,7 @@ runs:
 
       - name: Build x64
         uses: ./.github/actions/build
-        if: (inputs.os == 'windows-2025) || (inputs.os  == 'macos-13')
+        if: (inputs.os == 'windows-2025') || (inputs.os  == 'macos-13')
         with:
           node: ${{ steps.node-test-version.outputs.node-version }}
           node-major: ${{ inputs.node }}
@@ -145,7 +145,7 @@ runs:
     
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
-        if: inputs.os == 'windows-2025 && success()
+        if: inputs.os == 'windows-2025' && success()
         with:
           name: win32-edge-js-${{ inputs.node }}
           path: |
@@ -153,7 +153,7 @@ runs:
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
-        if: inputs.os == 'windows-2022 && success()
+        if: inputs.os == 'windows-2022' && success()
         with:
           name: win32-edge-js-x86-${{ inputs.node }}
           path: |
