--- a/.github/actions/test-build/action.yml
+++ b/.github/actions/test-build/action.yml
@@ -44,14 +44,14 @@ runs:
         pattern: win32-edge-js-${{ inputs.node }}*
 
     - name: Download artifacts
-      if:  runner.os == 'macOS' && inputs.os != 'macos-13'
+      if:  inputs.os == 'macos-15'
       uses: actions/download-artifact@v4
       with:
         path: release
         pattern: darwin-arm64-edge-js-${{ inputs.node }}*
 
     - name: Download artifacts
-      if:  runner.os == 'macOS' && inputs.os == 'macos-13'
+      if:  inputs.os == 'macos-13'
       uses: actions/download-artifact@v4
       with:
         path: release
@@ -62,13 +62,19 @@ runs:
       run: ls -R release
 
     - name: Copy artifacts
-      if:  runner.os == 'Windows'
+      if:  inputs.os == 'windows-2025'
       shell: pwsh
       run: |
         cmd /c copy /y release\win32-edge-js-${{ inputs.node }}\win32\x64\${{ inputs.node }}\edge_*.node lib\native\win32\x64\${{ inputs.node }}
 
     - name: Copy artifacts
-      if:  runner.os == 'macOS' && inputs.os != 'macos-13'
+      if:  inputs.os == 'windows-2022'
+      shell: pwsh
+      run: |
+        cmd /c copy /y release\win32-edge-js-${{ inputs.node }}\win32\ia32\${{ inputs.node }}\edge_*.node lib\native\win32\xia3264\${{ inputs.node }}
+
+    - name: Copy artifacts
+      if: inputs.os == 'macos-15'
       uses: actions/github-script@v7
       with:
         result-encoding: string
