--- a/.github/actions/build-node/action.yml
+++ b/.github/actions/build-node/action.yml
@@ -34,6 +34,7 @@ runs:
         with:
           node: 20
           os: ${{ inputs.os }}
+          arch: ${{ runner.arch }}
 
       - name: Get latest Node.js version for v${{ inputs.node }}
         id: node-test-version
@@ -155,7 +156,7 @@ runs:
         uses: actions/upload-artifact@v4
         if: inputs.os == 'windows-2022' && success()
         with:
-          name: win32-edge-js-x86-${{ inputs.node }}
+          name: win32-edge-js-ia32-${{ inputs.node }}
           path: |
             release
 
