--- a/.github/actions/test-build/action.yml
+++ b/.github/actions/test-build/action.yml
@@ -37,25 +37,25 @@ runs:
           }
 
     - name: Download artifacts
-      if:  runner.os == 'Windows'
+      if:  inputs.os == 'windows-2022'
+      uses: actions/download-artifact@v4
+      with:
+        path: release
+        pattern: win32-edge-js-ia32-${{ inputs.node }}*
+
+    - name: Download artifacts
+      if: inputs.os == 'windows-2025'
       uses: actions/download-artifact@v4
       with:
         path: release
         pattern: win32-edge-js-${{ inputs.node }}*
 
     - name: Download artifacts
-      if:  inputs.os == 'macos-15'
+      if: runner.os == 'macOS'
       uses: actions/download-artifact@v4
       with:
         path: release
-        pattern: darwin-arm64-edge-js-${{ inputs.node }}*
-
-    - name: Download artifacts
-      if:  inputs.os == 'macos-13'
-      uses: actions/download-artifact@v4
-      with:
-        path: release
-        pattern: darwin-x64-edge-js-${{ inputs.node }}*
+        pattern: darwin-${{ runner.arch }}-edge-js-${{ inputs.node }}*
 
     - name: List artifacts
       shell: bash
@@ -71,35 +71,19 @@ runs:
       if:  inputs.os == 'windows-2022'
       shell: pwsh
       run: |
-        cmd /c copy /y release\win32-edge-js-${{ inputs.node }}\win32\ia32\${{ inputs.node }}\edge_*.node lib\native\win32\xia3264\${{ inputs.node }}
+        cmd /c copy /y release\win32-edge-js-${{ inputs.node }}\win32\ia32\${{ inputs.node }}\edge_*.node lib\native\win32\ia32\${{ inputs.node }}
 
     - name: Copy artifacts
-      if: inputs.os == 'macos-15'
+      if: runner.os == 'macOS'
       uses: actions/github-script@v7
       with:
         result-encoding: string
         script: |
           try {
             const fs = require('fs')
-              fs.copyFileSync('release/darwin-arm64-edge-js-${{ inputs.node }}/darwin/arm64/${{ inputs.node }}/edge_coreclr.node', 'lib/native/darwin/arm64/${{ inputs.node }}/edge_coreclr.node');
-              fs.copyFileSync('release/darwin-arm64-edge-js-${{ inputs.node }}/darwin/arm64/${{ inputs.node }}/edge_nativeclr.node', 'lib/native/darwin/arm64/${{ inputs.node }}/edge_nativeclr.node');
-              fs.copyFileSync('release/darwin-arm64-edge-js-${{ inputs.node }}/darwin/arm64/${{ inputs.node }}/MonoEmbedding.exe', 'lib/native/darwin/arm64/${{ inputs.node }}/MonoEmbedding.exe');
-          } catch(err) {
-            core.error("Error creating release directory")
-            core.setFailed(err)
-          }
-
-    - name: Copy artifacts
-      if:  runner.os == 'macOS' && inputs.os == 'macos-13'
-      uses: actions/github-script@v7
-      with:
-        result-encoding: string
-        script: |
-          try {
-            const fs = require('fs')
-              fs.copyFileSync('release/darwin-x64-edge-js-${{ inputs.node }}/darwin/x64/${{ inputs.node }}/edge_coreclr.node', 'lib/native/darwin/x64/${{ inputs.node }}/edge_coreclr.node');
-              fs.copyFileSync('release/darwin-x64-edge-js-${{ inputs.node }}/darwin/x64/${{ inputs.node }}/edge_nativeclr.node', 'lib/native/darwin/x64/${{ inputs.node }}/edge_nativeclr.node');
-              fs.copyFileSync('release/darwin-x64-edge-js-${{ inputs.node }}/darwin/x64/${{ inputs.node }}/MonoEmbedding.exe', 'lib/native/darwin/x64/${{ inputs.node }}/MonoEmbedding.exe');
+              fs.copyFileSync('release/darwin-${{ runner.arch }}-edge-js-${{ inputs.node }}/darwin/${{ runner.arch }}/${{ inputs.node }}/edge_coreclr.node', 'lib/native/darwin/${{ runner.arch }}/${{ inputs.node }}/edge_coreclr.node');
+              fs.copyFileSync('release/darwin-${{ runner.arch }}-edge-js-${{ inputs.node }}/darwin/${{ runner.arch }}/${{ inputs.node }}/edge_nativeclr.node', 'lib/native/darwin/${{ runner.arch }}/${{ inputs.node }}/edge_nativeclr.node');
+              fs.copyFileSync('release/darwin-${{ runner.arch }}-edge-js-${{ inputs.node }}/darwin/${{ runner.arch }}/${{ inputs.node }}/MonoEmbedding.exe', 'lib/native/darwin/${{ runner.arch }}/${{ inputs.node }}/MonoEmbedding.exe');
           } catch(err) {
             core.error("Error creating release directory")
             core.setFailed(err)
@@ -107,12 +91,30 @@ runs:
 
     - name: Setup env
       uses: ./.github/actions/setup-env
+      if:  inputs.os != 'windows-2022'
       with:
         node: ${{ inputs.node }}
         os: ${{ inputs.os }}
+        arch: ${{ runner.arch }}
+
+    - name: Setup env
+      uses: ./.github/actions/setup-env
+      if:  inputs.os == 'windows-2022'
+      with:
+        node: ${{ inputs.node }}
+        os: ${{ inputs.os }}
+        arch: x86
 
     - name: Check edge-js Windows pre-built files
-      if:  runner.os == 'Windows'
+      if: inputs.os == 'windows-2022'
+      uses: andstor/file-existence-action@v3
+      with:
+        files: "lib/native/win32/ia32/${{ inputs.node }}/edge_coreclr.node, lib/native/win32/ia32/${{ inputs.node }}/edge_nativeclr.node"
+        fail: true
+        ignore_case: true
+
+    - name: Check edge-js Windows pre-built files
+      if: inputs.os != 'windows-2022'
       uses: andstor/file-existence-action@v3
       with:
         files: "lib/native/win32/${{ runner.arch }}/${{ inputs.node }}/edge_coreclr.node, lib/native/win32/${{ runner.arch }}/${{ inputs.node }}/edge_nativeclr.node"
@@ -120,18 +122,10 @@ runs:
         ignore_case: true
 
     - name: Check edge-js macOS pre-built files
-      if:  runner.os == 'macOS' && inputs.os == 'macos-13'
+      if:  runner.os == 'macOS'
       uses: andstor/file-existence-action@v3
       with:
         files: "lib/native/darwin/${{ runner.arch }}/${{ inputs.node }}/edge_nativeclr.node"
-        fail: true
-        ignore_case: true
-
-    - name: Check edge-js macOS pre-built files
-      if:  runner.os == 'macOS' && inputs.os != 'macos-13'
-      uses: andstor/file-existence-action@v3
-      with:
-        files: "lib/native/darwin/${{ runner.arch }}/${{ inputs.node }}/edge_coreclr.node"
         fail: true
         ignore_case: true
 
