--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,31 +44,46 @@ jobs:
           os: ${{ matrix.os }}
 
 
-  # artifacts:
-  #   runs-on: ubuntu-latest
-  #   needs: build
-  #   strategy:
-  #     fail-fast: false
+  artifacts:
+    runs-on: ubuntu-latest
+    needs: build
+    strategy:
+      fail-fast: false
 
-  #   name: artifacts node-${{ inputs.build-version }}
-  #   steps:
+    name: artifacts node-${{ inputs.build-version }}
+    steps:
 
-  #     - name: Download artifacts
-  #       uses: actions/download-artifact@v4
+      - name: Download artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: release
+          pattern: win32-edge-js-${{ inputs.build-version }}*
 
-  #     - name: Download artifacts
-  #       uses: actions/download-artifact@v4
-  #       with:
-  #         path: release
-  #         pattern: darwin-x64-edge-js-${{ inputs.build-version }}*
+      - name: Download artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: release
+          pattern: win32-edge-js-ia32-${{ inputs.build-version }}*
 
-  #     - name: Upload artifacts
-  #       uses: actions/upload-artifact@v4
-  #       if: success()
-  #       with:
-  #         name: edge-js-${{ inputs.build-version }}
-  #         path: |
-  #           release 
+      - name: Download artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: release
+          pattern: darwin-arm64-edge-js-${{ inputs.build-version }}*
+
+      - name: Download artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: release
+          pattern: darwin-x64-edge-js-${{ inputs.build-version }}*
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        if: success()
+        with:
+          name: edge-js-${{ inputs.build-version }}
+          path: |
+            release 
   
   test:
     runs-on: ${{ matrix.os }}
