--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -97,6 +97,7 @@ jobs:
         with:
           node: ${{ matrix.node }}
           os: ${{ matrix.os }}
+          arch: ${{ runner.arch }}
 
       - name: Run .NET 4.5 tests
         shell: bash
