--- a/.github/actions/build-node/action.yml
+++ b/.github/actions/build-node/action.yml
@@ -54,10 +54,12 @@ runs:
           script: |
             try {
               const fs = require('fs')
-              if('${{ runner.os }}' == 'Windows'){
+              if('${{ runner.os }}' == 'Windows' && '${{ inputs.os }}' == 'windows-2022'){
                 if(${{ inputs.node }} <23){
                   fs.mkdirSync('release/win32/ia32/${{ inputs.node }}', { recursive: true });
                 }
+              }
+              else if('${{ runner.os }}' == 'Windows' && '${{ inputs.os }}' == 'windows-2025'){
                 fs.mkdirSync('release/win32/x64/${{ inputs.node }}', { recursive: true });
                 if(${{ inputs.node }} >=20){
                   fs.mkdirSync('release/win32/arm64/${{ inputs.node }}', { recursive: true });
@@ -81,16 +83,18 @@ runs:
           script: |
             try {
               const fs = require('fs')
-              if('${{ runner.os }}' == 'Windows'){
+              if('${{ runner.os }}' == 'Windows' && '${{ inputs.os }}' == 'windows-2022'){
                 if(${{ inputs.node }} <23){
                   fs.writeFileSync('release/win32/ia32/${{ inputs.node }}/node.version', '${{ steps.node-test-version.outputs.node-version }}');
                 }
+              }
+              else if('${{ runner.os }}' == 'Windows' && '${{ inputs.os }}' == 'windows-2025'){
                 fs.writeFileSync('release/win32/x64/${{ inputs.node }}/node.version', '${{ steps.node-test-version.outputs.node-version }}');
                 if(${{ inputs.node }} >=20){
                   fs.writeFileSync('release/win32/arm64/${{ inputs.node }}/node.version', '${{ steps.node-test-version.outputs.node-version }}');
                 }
               }
-              else if('${{ runner.os }}' == 'macOS' && '${{ inputs.os }}' != 'macos-13'){
+              else if('${{ runner.os }}' == 'macOS' && '${{ inputs.os }}' == 'macos-15'){
                 fs.writeFileSync(`release/${process.platform}/arm64/${{ inputs.node }}/node.version`, '${{ steps.node-test-version.outputs.node-version }}');
               }
               else if('${{ runner.os }}' == 'macOS' && '${{ inputs.os }}' == 'macos-13'){
