--- a/.github/workflows/build-all.yml
+++ b/.github/workflows/build-all.yml
@@ -15,7 +15,7 @@ jobs:
   #   strategy:
   #     fail-fast: false
   #     matrix: 
-  #      os: [windows-2022, macos-13, macos-15]
+  #      os: [windows-2022, windows-2025, macos-13, macos-15]
   #   runs-on: ${{ matrix.os }}
   #   name: build node-16 ${{ matrix.os }}
   #   steps:
@@ -34,7 +34,7 @@ jobs:
   #   strategy:
   #     fail-fast: false
   #     matrix: 
-  #      os: [windows-2022, macos-13, macos-15]
+  #      os: [windows-2022, windows-2025, macos-13, macos-15]
   #   runs-on: ${{ matrix.os }}
   #   name: build node-18 ${{ matrix.os }}
   #   steps:
@@ -53,7 +53,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix: 
-       os: [windows-2022, macos-13, macos-15]
+       os: [windows-2022, windows-2025, macos-13, macos-15]
     runs-on: ${{ matrix.os }}
     name: build node-20 ${{ matrix.os }}
     steps:
@@ -72,7 +72,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix: 
-       os: [windows-2022, macos-13, macos-15]
+       os: [windows-2022, windows-2025, macos-13, macos-15]
     runs-on: ${{ matrix.os }}
     name: build node-22 ${{ matrix.os }}
     steps:
@@ -90,7 +90,7 @@ jobs:
   #   strategy:
   #     fail-fast: false
   #     matrix: 
-  #      os: [windows-2022, macos-13, macos-15]
+  #      os: [windows-2022, windows-2025, macos-13, macos-15]
   #   runs-on: ${{ matrix.os }}
   #   name: build node-23 ${{ matrix.os }}
   #   steps:
@@ -104,7 +104,7 @@ jobs:
   #         node: 23
   #         os: ${{ matrix.os }}
 
-  artifacts:
+  upload-artifacts:
     runs-on: ubuntu-latest
     # needs: [build-16, build-18, build-20, build-22, build-23]
     needs: [build-20, build-22]
@@ -151,7 +151,7 @@ jobs:
   #   strategy:
   #     fail-fast: false
   #     matrix: 
-  #      os: [windows-2022, macos-13, macos-15]
+  #      os: [windows-2022, windows-2025, macos-13, macos-15]
   #   runs-on: ${{ matrix.os }}
   #   needs: build-16
 
@@ -171,7 +171,7 @@ jobs:
   #   strategy:
   #     fail-fast: false
   #     matrix: 
-  #      os: [windows-2022, macos-13, macos-15]
+  #      os: [windows-2022, windows-2025, macos-13, macos-15]
   #   runs-on: ${{ matrix.os }}
   #   needs: build-18
 
@@ -191,7 +191,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix: 
-       os: [windows-2022, macos-13, macos-15]
+       os: [windows-2022, windows-2025, macos-13, macos-15]
     runs-on: ${{ matrix.os }}
     needs: build-20
 
@@ -211,7 +211,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix: 
-       os: [windows-2022, macos-13, macos-15]
+       os: [windows-2022, windows-2025, macos-13, macos-15]
     runs-on: ${{ matrix.os }}
     needs: build-22
 
@@ -231,7 +231,7 @@ jobs:
   #   strategy:
   #     fail-fast: false
   #     matrix: 
-  #      os: [windows-2022, macos-13, macos-15]
+  #      os: [windows-2022, windows-2025, macos-13, macos-15]
   #   runs-on: ${{ matrix.os }}
   #   needs: build-23
 
