--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,13 +44,13 @@ jobs:
           os: ${{ matrix.os }}
 
 
-  artifacts:
+  upload-artifacts:
     runs-on: ubuntu-latest
     needs: build
     strategy:
       fail-fast: false
 
-    name: artifacts node-${{ inputs.build-version }}
+    name: upload artifacts node-${{ inputs.build-version }}
     steps:
 
       - name: Download artifacts
