updating CI runner

--- a/.github/actions/setup-env/action.yml
+++ b/.github/actions/setup-env/action.yml
@@ -10,7 +10,7 @@ inputs:
   arch:
     description: 'Architecture'
     required: false
-    default: 'x64'
+    default: ''
 
 runs:
   using: "composite"
